fix(Dashboard): fix truncation

--- a/app/components/Dashboard/Courses/CourseList/style.less
+++ b/app/components/Dashboard/Courses/CourseList/style.less
@@ -66,6 +66,11 @@
     .listItemDescription {
       padding: 10px;
       cursor: default;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
@@ -88,5 +93,4 @@
       }
     }
   }
-
 }
